# biomuzak

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  README.md  USER_GUIDE.md  docker-compose.yml  go.mod  go.sum  package-lock.json  test-integration.sh
.antigravity/: antigravity-instructions.md  security-checklist.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
audio-processor/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
audio-processor/audio_processor/: __init__.py  main.py
audio-processor/tests/: __init__.py
cmd/server/: main.go
db/migrations/: 0001_initial_schema.sql  0002_add_playlist_genre.sql  0004_add_is_admin.sql  0005_fix_embedding_dimensions.sql
frontend/: .dockerignore  .env.example  Dockerfile  SETUP.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  App.jsx  App.test.js  api.js  main.jsx  theme.js
migrations/: 0001_initial_schema.up.sql
minio_data/.minio.sys/: format.json
pkg/auth/: auth.go  auth_test.go
pkg/config/: config.go
pkg/db/: db.go  library.go  playlist.go  similar.go  similar_test.go
pkg/handlers/: auth.go  errors.go  library.go  library_test.go  playlist.go  song.go  stream.go  upload.go  upload_test.go
pkg/metadata/: genre_test.go  metadata.go  metadata_test.go
pkg/middleware/: admin.go  auth.go  auth_test.go  cors.go
pkg/models/: library.go  playlist.go  song.go  user.go
scriptZ/: bulk_rename_trax.bash  find_duplicates.bash  sync_remote_local.bash  transcode_flac2mp3.sh
(+77 files in other folders)
