[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-processor"
version = "0.1.0"
description = "Audio processing service using Essentia for feature extraction"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "essentia",
    "numpy",
]

[project.scripts]
audio-processor = "audio_processor.main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "test*", "tests.*"]
