[project]
name = "audio-processor"
version = "0.1.0"
description = "Audio processing service using Essentia for feature extraction"
authors = [
	{ name = "biomuzak", email = "devnull@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"fastapi",
	"uvicorn",
	"python-multipart",
	"numpy",
	"essentia",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
